Bug 131593 - Android Viewer: Text in merged cell only partly rendered
Summary: Android Viewer: Text in merged cell only partly rendered
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Android Viewer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Michael Weghorn (away)
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-26 09:10 UTC by Michael Weghorn (away)
Modified: 2020-03-26 12:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample doc to reproduce the issue (11.72 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-03-26 09:10 UTC, Michael Weghorn (away)
Details
Screencast demonstrating the issue. (2.85 MB, video/webm)
2020-03-26 09:10 UTC, Michael Weghorn (away)
Details
Modified sample doc for use with gtktiledviewer (12.07 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-03-26 09:12 UTC, Michael Weghorn (away)
Details
Screenshot with gtktiledviewer and indicators for the tile borders (52.98 KB, image/png)
2020-03-26 09:14 UTC, Michael Weghorn (away)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn (away) 2020-03-26 09:10:03 UTC
Created attachment 159030 [details]
sample doc to reproduce the issue

In Android Viewer, when text in a merged cell spans multiple tiles, it is not always rendered correctly.

Steps to reproduce:

1) open attached document "partly_shown.ods" in Android Viewer
2) zoom in

Result: The text is no longer fully shown, but "cut off" at the bottom (but not yet at the very left; to be exact, not for "the first tile in the first row of tiles").

LibreOffice Android Viewer was self-compiled from master as of commit 7de7512718ac192fcad441d5500d056316f72d72.
Comment 1 Michael Weghorn (away) 2020-03-26 09:10:46 UTC
Created attachment 159031 [details]
Screencast demonstrating the issue.
Comment 2 Michael Weghorn (away) 2020-03-26 09:12:33 UTC
Created attachment 159032 [details]
Modified sample doc for use with gtktiledviewer
Comment 3 Michael Weghorn (away) 2020-03-26 09:14:48 UTC
Created attachment 159033 [details]
Screenshot with gtktiledviewer and indicators for the tile borders

The issue can also be reproduced with gtktiledviewer by using the modified sample doc.

When showing indicators for the tile borders, it becomes apparent that everything is OK for the first row of tiles and the first tile in the second row, but rendering is broken for all other tiles in the second row, s. attached screenshot taken with gtktiledviewer and env variable LOK_DEBUG_TILES=1 set.
Comment 4 Michael Weghorn (away) 2020-03-26 09:15:49 UTC
I've looked into the issue myself, this bug report is mostly for documentation purposes.
Comment 5 Commit Notification 2020-03-26 12:26:56 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d7e9a1a5f7062749633418ed4971cecbbd5c409e

tdf#131593 ScOutputData::GetMergeOrigin: Handle cells outside own area

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.